--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "axios": "^0.19.0",
     "react": "16.8.6",
+    "react-dom": "^16.9.0",
     "react-native": "0.60.4",
     "react-native-fbsdk": "^1.0.1",
     "react-native-gesture-handler": "^1.3.0",
